<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F51B5"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="408dp"
        android:layout_height="43dp"
        android:background="#FFC107"
        android:text="@string/titu"
        android:textColor="#3F51B5"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/ap"
        android:textColor="#FDFCFC"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />

    <EditText
        android:id="@+id/apn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/apn"
        android:textColor="#FDFAFA"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/ap"
        app:layout_constraintTop_toBottomOf="@+id/ap" />

    <TextView
        android:id="@+id/coe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ce"
        android:textColor="#FAF8F8"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@+id/apn"
        app:layout_constraintTop_toBottomOf="@+id/apn" />

    <EditText
        android:id="@+id/ce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/coe"
        android:textColor="#FBF8F8"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/coe"
        app:layout_constraintTop_toBottomOf="@+id/coe" />

    <TextView
        android:id="@+id/c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/c"
        android:textColor="#F1EDED"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@+id/ce"
        app:layout_constraintTop_toBottomOf="@+id/ce" />

    <EditText
        android:id="@+id/cl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/cl"
        android:textColor="#FAF5F5"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/c"
        app:layout_constraintTop_toBottomOf="@+id/c" />

    <TextView
        android:id="@+id/fn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fn"
        android:textColor="#FBFAFA"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@+id/cl"
        app:layout_constraintTop_toBottomOf="@+id/cl" />

    <EditText
        android:id="@+id/fnt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="dd/mm/aaaa"
        android:inputType="date"
        android:text="@string/fnt"
        android:textColor="#FFFCFC"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/fn"
        app:layout_constraintTop_toBottomOf="@+id/fn" />

    <TextView
        android:id="@+id/cr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cr"
        android:textColor="#FBFAFA"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@+id/fnt"
        app:layout_constraintTop_toBottomOf="@+id/fnt" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/cr"
        app:layout_constraintTop_toBottomOf="@+id/cr">

        <RadioButton
            android:id="@+id/is"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="@string/is"
            android:textColor="#FAF7F7"
            android:textSize="10sp" />

        <RadioButton
            android:id="@+id/ia"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:text="@string/ia"
            android:textColor="#F8F7F7"
            android:textSize="10sp" />

        <RadioButton
            android:id="@+id/im"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/im"
            android:textColor="#F8F5F5"
            android:textSize="10sp" />

        <RadioButton
            android:id="@+id/ad"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:text="@string/ad"
            android:textColor="#F4F0F0"
            android:textSize="10sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/pr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pr"
        android:textColor="#F6F3F3"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <CheckBox
        android:id="@+id/r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/r"
        android:textColor="#F4EEEE"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/pr"
        app:layout_constraintTop_toBottomOf="@+id/pr" />

    <CheckBox
        android:id="@+id/i"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i"
        android:textColor="#E6E0E0"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/r"
        app:layout_constraintTop_toBottomOf="@+id/r" />

    <CheckBox
        android:id="@+id/am"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ami"
        android:textColor="#FAF7F7"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/r"
        app:layout_constraintTop_toTopOf="@+id/r" />

    <CheckBox
        android:id="@+id/pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pl"
        android:textColor="#F8F2F2"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/i"
        app:layout_constraintTop_toBottomOf="@+id/r" />

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:drawableLeft="@drawable/baseline_send_24"
        android:text="@string/btn"
        app:layout_constraintStart_toEndOf="@+id/pb"
        app:layout_constraintTop_toTopOf="@+id/pb" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toEndOf="@+id/apn"
        app:layout_constraintTop_toTopOf="@+id/apn"
        app:srcCompat="@drawable/apellidoynombre" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toEndOf="@+id/ce"
        app:layout_constraintTop_toTopOf="@+id/ce"
        app:srcCompat="@drawable/correo" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toEndOf="@+id/cl"
        app:layout_constraintTop_toTopOf="@+id/cl"
        app:srcCompat="@drawable/clave" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toEndOf="@+id/fnt"
        app:layout_constraintTop_toTopOf="@+id/fnt"
        app:srcCompat="@drawable/fechanaci" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="84dp"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toTopOf="@+id/radioGroup"
        app:srcCompat="@drawable/carrera" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toEndOf="@+id/pb"
        app:layout_constraintTop_toTopOf="@+id/pb"
        app:srcCompat="@drawable/convo" />

</androidx.constraintlayout.widget.ConstraintLayout>